# racshell

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
racshell/: adddataset.cpp  addgroup.cpp  addresource.cpp  adduser.cpp  altdataset.cpp  alteruser.cpp  altgroup.cpp  altresource.cpp  altuser.cpp  connect.cpp  deletedataset.cpp  deletegroup.cpp  deletepermitdataset.cpp  deletepermitresource.cpp  deleteresource.cpp  deleteuser.cpp  listdataset.cpp  listgroup.cpp  listgrp.cpp  listresource.cpp  listuser.cpp  listuser_fields.json  permitdataset.cpp  permitresource.cpp  remove.cpp  searchresource.cpp  test_extract_user.json
racshell/include/: add_entity_command.hpp  alter_entity_command.hpp  dataset_command.hpp  delete_entity_command.hpp  entity_command.hpp  group_connection_command.hpp  output_formatter.hpp  resource_command.hpp
racshell/include/formatters/: json_formatter.cpp  text_formatter.cpp
racshell/include/racshell/: command_helper.hpp  output_formatter.hpp
racshell/include/racshell/commands/: add_entity_command.hpp  alter_entity_command.hpp  dataset_command.hpp  delete_entity_command.hpp  entity_command.hpp  group_connection_command.hpp  permit_command.hpp  resource_command.hpp  search_command.hpp
racshell/include/racshell/data/: access_entry.hpp  dataset_data.hpp  group_comparison_data.hpp  user_comparison_data.hpp
racshell/lib/: add_entity_command.hpp  alter_entity_command.hpp  command_helper.hpp  dataset_command.hpp  dataset_data.hpp  delete_entity_command.hpp  entity_command.hpp  entity_mutation_command.hpp  group_connection_command.hpp  group_data.hpp  output_formatter.hpp  permit_command.hpp  resource_command.hpp  resource_data.hpp  resource_mutation_command.hpp  user_data.hpp
racshell/lib/formatters/: json_formatter.cpp  text_formatter.cpp
racshell/src/commands/dataset/: deletepermitdataset.cpp  listdataset.cpp  permitdataset.cpp  searchdatasets.cpp
racshell/src/commands/group/: addgroup.cpp  altgroup.cpp  comparegroups.cpp  deletegroup.cpp  remove.cpp  searchgroups.cpp
racshell/src/commands/resource/: addresource.cpp  altresource.cpp  deletepermitresource.cpp  deleteresource.cpp  listresource.cpp  permitresource.cpp  searchresource.cpp
racshell/src/commands/user/: adduser.cpp  altuser.cpp  compareusers.cpp  deleteuser.cpp  listuser.cpp  searchusers.cpp
